[package]
name = "freetime-gtk"
version = "0.1.0"
authors = ["Harley Swick <hdswick@gmail.com>"]
edition = "2018"

[dependencies]
gtk = "^0.6.0"
gtk-test = "^0.3.0"
relm-derive = "^0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dependencies.relm]
git = "https://github.com/hswick/relm.git"
branch = "master"